applied flicker fix for buttons

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -129,6 +129,11 @@ button:active {
 
 @tailwind utilities;
 
+button {
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
+}
+
 .nb-dark-blue-gradient {
   background: rgb(101,158,200);
   background: linear-gradient(345deg, rgba(101,158,200,1) 3%, rgba(0,42,78,1) 88%);
